# sigma

./: README.md
backend/: .gitignore  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: auth.py  chat.py  chat_stream.py  dependencies.py  documents.py  router.py  users.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  chat.py  document.py  user.py
backend/app/schemas/: auth.py  chat.py  common.py  documents.py
backend/app/services/: agent.py  auth.py  chat_threads.py  citations.py  document_parser.py  documents.py  embeddings.py  ingestion.py  redaction.py  retrieval.py  stream_events.py  text_chunks.py  title_generation.py  users.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: auth-provider.tsx  chat-components.tsx  horo-app.tsx  login-screen.tsx  markdown-message.tsx  providers.tsx
frontend/src/components/ui/: badge.tsx  card.tsx  textarea.tsx
frontend/src/lib/: api.ts  types.ts
